--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -4,9 +4,21 @@
   flex-wrap: wrap;
   text-align: center;
   justify-content: space-between;
+  @media screen and (min-width: 767px) {
+    margin: -15px;
+  }
   &__item {
-    display: flex;
-    margin-bottom: 30px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 60px) / 2);
+      margin: 15px;
+    }
+    @media (min-width: $desktop) {
+      flex-basis: calc((100% - 120px) / 6);
+      margin: 15px;
+    }
   }
   &__icon {
     display: block;
