--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -2,6 +2,17 @@
 .contacts {
   margin-left: auto;
   align-items: center;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+  }
+  &__item {
+    @media screen and (min-width: $tablet) {
+      margin: 10px 0;
+    }
+  }
   &__icon {
     margin-right: 10px;
   }
