--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,12 +1,14 @@
 /*особенности*/
 .features {
-  @media screen and (min-width: $desktop) {
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-between;
+    margin: -15px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin: -15px;
   }
 
   &__title {
@@ -20,18 +22,19 @@
     @include style(500, 14px, 1.8);
   }
   &__item {
-    margin-bottom: 30px;
-    @media screen and (min-width: $tablet) {
-      width: calc((100% -2 * 15px) / 2);
-      @media screen and (min-width: $desktop) {
-        flex-basis: calc(100% / 3 - 120px);
-      }
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
     }
-
-    &__item:last-child {
-      margin-left: 0px;
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 60px) / 2);
+      margin: 15px;
+    }
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 120px) / 4);
+      margin: 15px;
     }
   }
+
   &__icon {
     padding: 25px 100px;
     background: $filter__background-color;
