--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,11 +3,47 @@
   text-align: center;
   background: $background-color;
   padding: 60px 0;
+  &__box {
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
   &-address {
-    margin-bottom: 60px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 60px;
+    }
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 120px) / 2);
+      margin: 30px;
+    }
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 120px) / 3);
+      margin: 35px;
+    }
   }
   &__social {
-    margin-bottom: 60px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 60px;
+    }
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 120px) / 2);
+      margin: 30px;
+    }
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 120px) / 3);
+      margin: 35px;
+    }
+  }
+  &__form {
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 120px) / 2);
+      margin: 30px;
+    }
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 120px) / 3);
+      margin: 35px;
+    }
   }
   &__disription {
     margin: 0;
