--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -7,6 +7,12 @@
   &__item:last-child {
     margin-right: 0;
   }
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
 }
 
 .site-nav__label {
