--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -31,7 +31,11 @@
     border-radius: 0px 0px 4px 4px;
     margin-bottom: 30px;
     @media (min-width: $tablet) {
-      width: calc((100% -2 * 15px) / 2);
+      width: calc((100% - 60px) / 2);
+      margin: 15px;
+    }
+    @media (min-width: $desktop) {
+      width: calc((100% - 120px) / 4);
       margin: 15px;
     }
   }
