--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,7 @@ summary {
   display: list-item;
 }
 
-.social-links, .social-links__icon, .client, .filter {
+.social-links, .social-links__icon, .client {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -628,6 +628,7 @@ input {
   border-radius: 4px;
   padding: 6px 22px;
   margin-left: 8px;
+  margin-bottom: 15px;
   border: 0px solid transparent;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -876,7 +877,7 @@ input {
           justify-content: space-between;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .client {
     margin: -15px;
   }
@@ -898,8 +899,8 @@ input {
 
 @media (min-width: 1200px) {
   .client__item {
-    -ms-flex-preferred-size: calc((100% - 120px) / 6);
-        flex-basis: calc((100% - 120px) / 6);
+    -ms-flex-preferred-size: calc((100% - 180px) / 6);
+        flex-basis: calc((100% - 180px) / 6);
     margin: 15px;
   }
 }
@@ -1131,14 +1132,42 @@ input {
 
 /* портфолио*/
 .filter {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 50px;
 }
 
-.filter__element:first-child {
-  margin-left: 8px;
+@media screen and (max-width: 1199px) {
+  .filter {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    margin: -4px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter__item {
+    -ms-flex-preferred-size: calc((100% - 24px) / 3);
+        flex-basis: calc((100% - 24px) / 3);
+    margin: 4px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter__item {
+    -ms-flex-preferred-size: calc((100% - 40px) / 5);
+        flex-basis: calc((100% - 40px) / 5);
+    margin: 4px;
+  }
 }
 
 /*проекты*/
@@ -1147,10 +1176,17 @@ input {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+}
+
+@media screen and (min-width: 768px) {
+  .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
 .projects__title {
@@ -1178,10 +1214,26 @@ input {
   margin-top: 8px;
 }
 
-.projects__item {
-  margin: 30px 0 0 30px;
-  -ms-flex-preferred-size: calc(100% / 3 - 30px);
-      flex-basis: calc(100% / 3 - 30px);
+@media screen and (max-width: 767px) {
+  .projects__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .projects__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .projects__item {
+    -ms-flex-preferred-size: calc((100% - 90px) / 3);
+        flex-basis: calc((100% - 90px) / 3);
+    margin: 15px;
+  }
 }
 
 .projects__box {
@@ -1192,7 +1244,6 @@ input {
 
 .projects__link {
   position: relative;
-  display: block;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1274,7 +1325,7 @@ input {
   .footer-address {
     -ms-flex-preferred-size: calc((100% - 120px) / 3);
         flex-basis: calc((100% - 120px) / 3);
-    margin: 35px;
+    margin: 30px;
   }
 }
 
@@ -1296,7 +1347,7 @@ input {
   .footer__social {
     -ms-flex-preferred-size: calc((100% - 120px) / 3);
         flex-basis: calc((100% - 120px) / 3);
-    margin: 35px;
+    margin: 30px;
   }
 }
 
@@ -1312,7 +1363,7 @@ input {
   .footer__form {
     -ms-flex-preferred-size: calc((100% - 120px) / 3);
         flex-basis: calc((100% - 120px) / 3);
-    margin: 35px;
+    margin: 30px;
   }
 }
 
