--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -4,8 +4,10 @@
   flex-wrap: wrap;
   text-align: center;
   justify-content: space-between;
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: $tablet) {
     margin: -15px;
+  }
+  @media (min-width: $desktop) {
   }
   &__item {
     @media screen and (max-width: 767px) {
@@ -16,7 +18,7 @@
       margin: 15px;
     }
     @media (min-width: $desktop) {
-      flex-basis: calc((100% - 120px) / 6);
+      flex-basis: calc((100% - 180px) / 6);
       margin: 15px;
     }
   }
