--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,9 +1,22 @@
 /* портфолио*/
 .filter {
-  @extend %flex;
-  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 50px;
-  &__element:first-child {
-    margin-left: 8px;
+  @media screen and (max-width: 1199px) {
+    justify-content: flex-start;
+  }
+  @media screen and (min-width: $tablet) {
+    margin: -4px;
+  }
+  &__item {
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 24px) / 3);
+      margin: 4px;
+    }
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 40px) / 5);
+      margin: 4px;
+    }
   }
 }
