--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -2,9 +2,13 @@
 .projects {
   color: $text-color;
   @include style(700, 18px, 2);
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  @media screen and (min-width: $desktop) {
+  }
   &__title {
     @include style(700, 18px, 2);
     color: $second-color;
@@ -21,8 +25,17 @@
     margin-top: 8px;
   }
   &__item {
-    margin: 30px 0 0 30px;
-    flex-basis: calc(100% / 3 - 30px);
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc((100% - 60px) / 2);
+      margin: 15px;
+    }
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc((100% - 90px) / 3);
+      margin: 15px;
+    }
   }
   &__box {
     @include border(1px, $projects-bgc);
@@ -31,7 +44,6 @@
   }
   &__link {
     position: relative;
-    display: block;
     @include transition(box-shadow);
   }
   &__link:hover,
