--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -1,5 +1,6 @@
 .checkbox {
-  margin: 20px 0 30px 12px;
+  margin-bottom: 30px;
+  padding-left: 12px;
   &__label {
     display: inline-block;
     @include style(400, 14px, 1.8);
@@ -8,8 +9,12 @@
     appearance: none;
     position: absolute;
   }
+  &__text {
+    text-decoration: revert;
+  }
   &__policy::before {
     content: "";
+    display: inline-flex;
     width: 16px;
     height: 15px;
     margin-right: 8px;
