--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,6 +3,8 @@
   background-color: $background-color;
   text-align: center;
   padding: 200px 0;
+  max-width: 1600px;
+  height: 600px;
   margin: 0 auto;
   background-image: linear-gradient(
       to right,
