--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,7 @@ summary {
   display: list-item;
 }
 
-.social-links, .social-links__icon, .client {
+.site-nav, .contacts__link, .social-links, .social-links__icon, .modal__button-close, .form-group, .projects__overlay, .subscribe-form, .subscribe-form__input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -376,25 +376,7 @@ a {
 }
 
 .section {
-  padding: 60px 0;
-}
-
-@media screen and (max-width: 1199px) {
-  .section--work {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .section--work {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-.section--team {
-  background: #f5f4fa;
+  padding: 94px 0;
 }
 
 .text-hidden {
@@ -406,8 +388,8 @@ input {
   outline: none;
 }
 
-.footer-logo {
-  margin-bottom: 20px;
+.section-team {
+  background: #f5f4fa;
 }
 
 .logo {
@@ -525,6 +507,7 @@ input {
   font-size: 14px;
   line-height: 1.1;
   font-style: normal;
+  padding: 30px 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -546,6 +529,10 @@ input {
 }
 
 /*коннтакты footer*/
+.contacts-footer {
+  margin-top: 20px;
+}
+
 .contacts-footer__link {
   background: #2f303a;
   color: rgba(255, 255, 255, 0.6);
@@ -576,6 +563,8 @@ input {
   background-color: #2f303a;
   text-align: center;
   padding: 200px 0;
+  max-width: 1600px;
+  height: 600px;
   margin: 0 auto;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), color-stop(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/new-Img.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/new-Img.jpg);
@@ -602,6 +591,7 @@ input {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
+  max-height: 50px;
   display: inline-block;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -609,6 +599,7 @@ input {
   cursor: pointer;
   border-radius: 4px;
   padding: 10px 32px;
+  min-width: 200px;
   border: 1px solid transparent;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -628,7 +619,6 @@ input {
   border-radius: 4px;
   padding: 6px 22px;
   margin-left: 8px;
-  margin-bottom: 15px;
   border: 0px solid transparent;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -646,6 +636,10 @@ input {
 }
 
 /*особенности*/
+.features {
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
   .features {
     display: -webkit-box;
@@ -653,7 +647,6 @@ input {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    text-align: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -673,7 +666,6 @@ input {
   line-height: 1.2;
   text-transform: uppercase;
   margin-bottom: 10px;
-  text-align: center;
 }
 
 .features__text {
@@ -705,12 +697,19 @@ input {
   }
 }
 
+.features__item:last-child {
+  margin-left: 0px;
+}
+
 .features__icon {
   padding: 25px 100px;
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
-  text-align: center;
+}
+
+.title__work {
+  display: none;
 }
 
 .work {
@@ -806,7 +805,6 @@ input {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-bottom: 30px;
 }
 
 @media (min-width: 768px) {
@@ -823,17 +821,23 @@ input {
   }
 }
 
+@media (max-width: 480px) {
+  .team__specialist > img {
+    width: 450px;
+  }
+}
+
+@media (max-width: 768px) {
+  .team__specialist > img {
+    width: 354px;
+  }
+}
+
 .social-links {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
-}
-
-@media screen and (min-width: 480px) {
-  .social-links {
-    padding: 16px 0 24px 0;
-  }
+  padding: 16px 32px 0 32px;
 }
 
 .social-links--footer {
@@ -852,7 +856,6 @@ input {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-left: 10px;
 }
 
 .social-links__icon:hover, .social-links__icon:focus {
@@ -869,38 +872,31 @@ input {
 
 /*постоянные клиенты*/
 .client {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  text-align: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .client {
-    margin: -15px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media (min-width: 480px) {
   .client__item {
-    margin-bottom: 30px;
+    margin: 5px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .client__item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 2);
-        flex-basis: calc((100% - 60px) / 2);
-    margin: 15px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .client__item {
-    -ms-flex-preferred-size: calc((100% - 180px) / 6);
-        flex-basis: calc((100% - 180px) / 6);
     margin: 15px;
   }
 }
@@ -948,7 +944,7 @@ input {
 
 .modal {
   padding: 40px;
-  width: 528px;
+  width: 450px;
   min-height: 581px;
   background-color: #fff;
   position: absolute;
@@ -961,6 +957,12 @@ input {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .modal__button-close {
@@ -1056,6 +1058,7 @@ input {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
+  margin-bottom: 20px;
 }
 
 .form-group__comment:hover, .form-group__comment:focus {
@@ -1072,7 +1075,9 @@ input {
 
 .form-group__icon {
   position: absolute;
-  top: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 10px;
   width: 18px;
   height: 18px;
@@ -1093,7 +1098,8 @@ input {
 }
 
 .checkbox {
-  margin: 20px 0 30px 12px;
+  margin-bottom: 30px;
+  padding-left: 12px;
 }
 
 .checkbox__label {
@@ -1109,8 +1115,16 @@ input {
   position: absolute;
 }
 
+.checkbox__text {
+  -webkit-text-decoration: revert;
+          text-decoration: revert;
+}
+
 .checkbox__policy::before {
   content: "";
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   width: 16px;
   height: 15px;
   margin-right: 8px;
@@ -1140,39 +1154,37 @@ input {
   margin-bottom: 50px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 480px) {
   .filter {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
 @media screen and (min-width: 768px) {
   .filter {
-    margin: -4px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 480px) {
   .filter__item {
-    -ms-flex-preferred-size: calc((100% - 24px) / 3);
-        flex-basis: calc((100% - 24px) / 3);
-    margin: 4px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .filter__item {
-    -ms-flex-preferred-size: calc((100% - 40px) / 5);
-        flex-basis: calc((100% - 40px) / 5);
-    margin: 4px;
+    margin-bottom: 15px;
   }
 }
 
 /*проекты*/
 .projects {
   color: #000;
+  margin-top: -30px;
+  margin-left: -30px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -1244,6 +1256,7 @@ input {
 
 .projects__link {
   position: relative;
+  display: block;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1289,57 +1302,81 @@ input {
 }
 
 .footer {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
   background: #2f303a;
   padding: 60px 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .footer__box {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
+@media screen and (min-width: 768px) {
+  .footer__box {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__box {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.footer__address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
+}
+
 @media screen and (max-width: 767px) {
-  .footer-address {
+  .footer__social {
     margin-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .footer-address {
-    -ms-flex-preferred-size: calc((100% - 120px) / 2);
-        flex-basis: calc((100% - 120px) / 2);
-    margin: 30px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer-address {
-    -ms-flex-preferred-size: calc((100% - 120px) / 3);
-        flex-basis: calc((100% - 120px) / 3);
-    margin: 30px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .footer__social {
-    margin-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 768px) {
   .footer__social {
     -ms-flex-preferred-size: calc((100% - 120px) / 2);
         flex-basis: calc((100% - 120px) / 2);
     margin: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
@@ -1348,6 +1385,16 @@ input {
     -ms-flex-preferred-size: calc((100% - 120px) / 3);
         flex-basis: calc((100% - 120px) / 3);
     margin: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
@@ -1363,7 +1410,7 @@ input {
   .footer__form {
     -ms-flex-preferred-size: calc((100% - 120px) / 3);
         flex-basis: calc((100% - 120px) / 3);
-    margin: 30px;
+    margin: auto;
   }
 }
 
@@ -1371,6 +1418,16 @@ input {
   margin: 0;
   margin-bottom: 20px;
   height: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
@@ -1379,8 +1436,14 @@ input {
   color: #fff;
 }
 
+.subscribe-form {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .subscribe-form__input {
-  margin-bottom: 20px;
+  margin-left: 0;
   padding: 8px;
   width: 358px;
   height: 50px;
@@ -1395,9 +1458,16 @@ input {
 }
 
 .subscribe-form__button {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-left: 10px;
 }
 
