--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -33,6 +33,7 @@ a {
     display: flex;
   }
 }
+
 .page-header {
   border-bottom: 1px solid $header-line-color;
   @media screen and (max-width: 767px) {
@@ -42,7 +43,6 @@ a {
     padding-top: 16px;
   }
 }
-
 .title {
   color: $text-color;
   font-style: normal;
@@ -52,7 +52,6 @@ a {
   text-align: center;
   margin-bottom: 50px;
 }
-
 .container {
   margin: 0 auto;
   padding: 0 15px;
@@ -66,20 +65,8 @@ a {
     width: 1200px;
   }
 }
-
 .section {
-  padding: 60px 0;
-  &--work {
-    @media screen and (max-width: 1199px) {
-      display: none;
-    }
-    @media screen and (min-width: $desktop) {
-      display: flex;
-    }
-  }
-  &--team {
-    background: $filter__background-color;
-  }
+  padding: 94px 0;
 }
 .text-hidden {
   visibility: hidden;
@@ -88,7 +75,6 @@ a {
 input {
   outline: none;
 }
-
-.footer-logo {
-  margin-bottom: 20px;
+.section-team {
+  background: $filter__background-color;
 }
