--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -20,6 +20,8 @@
     color: $primary-text-color;
     @include style(500, 14px, 1.1);
     font-style: normal;
+    padding: 30px 0;
+    @extend %flex;
     align-items: center;
     fill: $primary-text-color;
     transition: fill 250ms $timing-function;
@@ -37,6 +39,7 @@
 
 /*коннтакты footer*/
 .contacts-footer {
+  margin-top: 20px;
   &__link {
     background: $background-color;
     color: $color-contacts-footer-link;
