--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -3,20 +3,17 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 50px;
-  @media screen and (max-width: 1199px) {
-    justify-content: flex-start;
+  @media screen and (max-width: $mobile) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   @media screen and (min-width: $tablet) {
-    margin: -4px;
+    flex-wrap: nowrap;
   }
   &__item {
-    @media screen and (min-width: $tablet) {
-      flex-basis: calc((100% - 24px) / 3);
-      margin: 4px;
-    }
-    @media screen and (min-width: $desktop) {
-      flex-basis: calc((100% - 40px) / 5);
-      margin: 4px;
+    @media screen and (max-width: $mobile) {
+      margin-bottom: 15px;
     }
   }
 }
