--- a/sass/components/_form-group.scss
+++ b/sass/components/_form-group.scss
@@ -1,5 +1,6 @@
 .form-group {
   margin-bottom: 10px;
+  @extend %flex;
   flex-direction: column;
   &__label {
     margin-bottom: 4px;
@@ -36,6 +37,7 @@
     color: $primary-text-color;
     transition: border 250ms $timing-function;
     resize: none;
+    margin-bottom: 20px;
   }
   &__comment:hover,
   &__comment:focus {
@@ -49,7 +51,8 @@
   }
   &__icon {
     position: absolute;
-    top: 10px;
+    top: 50%;
+    transform: translateY(-50%);
     left: 10px;
     width: 18px;
     height: 18px;
