--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -29,7 +29,6 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    margin-bottom: 30px;
     @media (min-width: $tablet) {
       width: calc((100% - 60px) / 2);
       margin: 15px;
@@ -38,5 +37,13 @@
       width: calc((100% - 120px) / 4);
       margin: 15px;
     }
+  }
+}
+.team__specialist > img {
+  @media (max-width: $mobile) {
+    width: 450px;
+  }
+  @media (max-width: $tablet) {
+    width: 354px;
   }
 }
