--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,17 @@ a {
           align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .header {
     display: -webkit-box;
@@ -467,6 +478,61 @@ input {
   height: 4px;
   background-color: #2196f3;
   border-radius: 2px;
+}
+
+.menu-btn,
+.close-btn {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  line-height: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn,
+  .close-btn {
+    display: none;
+  }
+}
+
+.menu-icon,
+.close-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.menu-btn,
+.close-btn:hover,
+.menu-btn,
+.close-btn:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.mobile-menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
 }
 
 /*коннтакты*/
@@ -708,8 +774,10 @@ input {
   margin-bottom: 30px;
 }
 
-.title__work {
-  display: none;
+@media screen and (max-width: 1200px) {
+  .section__work {
+    display: none;
+  }
 }
 
 .work {
@@ -805,6 +873,7 @@ input {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
 }
 
 @media (min-width: 768px) {
@@ -821,13 +890,13 @@ input {
   }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 480px) {
   .team__specialist > img {
     width: 450px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .team__specialist > img {
     width: 354px;
   }
