--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./base/common";
 @import "./components/logo";
 @import "./components/site-nav";
+@import "./components/mobile-menu";
 @import "./components/contacts";
 @import "./components/hero";
 @import "./components/buttons";
